--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit "Submit", :class =>"btn btn-primary" %>
   </div>
 <% end %>
