--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>Editing person</h1>
-
+<div class="page-header">
+  <h1>Editing person</h1>
+</div>
 <%= render 'form' %>
 
 <%= link_to 'Show', @person %> |
