--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,6 +1,7 @@
-<h1>Listing people</h1>
-
-<table>
+<div class="page-header">
+  <h1>Listing people</h1>
+</div>
+<table class="table table-striped table-bordered">
   <tr>
     <th></th>
     <th></th>
@@ -9,9 +10,9 @@
 
 <% @people.each do |person| %>
   <tr>
-    <td><%= link_to 'Show', person %></td>
-    <td><%= link_to 'Edit', edit_person_path(person) %></td>
-    <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Show', person, :class => "btn btn-success" %></td>
+    <td><%= link_to 'Edit', edit_person_path(person), :class => "btn btn-warning" %></td>
+    <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger" %></td>
   </tr>
 <% end %>
 </table>
