--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New person</h1>
-
+<div class="page-header">
+  <h1>New person</h1>
+</div>
 <%= render 'form' %>
 
-<%= link_to 'Back', people_path %>
+<%= link_to 'Back', people_path, :class => "btn btn-info" %>
