--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
 
 
-<%= link_to 'Edit', edit_person_path(@person) %> |
-<%= link_to 'Back', people_path %>
+<%= link_to 'Edit', edit_person_path(@person), :class => "btn btn-warning" %> |
+<%= link_to 'Back', people_path, :class => "btn btn-info" %>
