--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -3,5 +3,5 @@
 </div>
 <%= render 'form' %>
 
-<%= link_to 'Show', @person %> |
-<%= link_to 'Back', people_path %>
+<%= link_to 'Show', @person, :class => "btn btn-primary" %> |
+<%= link_to 'Back', people_path, :class => "btn btn-info" %>
