--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -10,7 +10,10 @@
       </ul>
     </div>
   <% end %>
-
+  <div class="well">
+    <%= f.input :title %>
+    <%= f.input :body %>
+  </div>
   <div class="form-actions">
     <%= f.submit "Submit", :class =>"btn btn-primary" %>
   </div>
