--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,18 +1,15 @@
-<%= form_for(@person) do |f| %>
+<%= semantic_form_for(@person) do |f| %>
   <% if @person.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@person.errors.count, "error") %> prohibited this person from being saved:</h2>
-
-      <ul>
-      <% @person.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+      <%= f.semantic_errors %>
     </div>
   <% end %>
   <div class="well">
-    <%= f.input :title %>
-    <%= f.input :body %>
+    <%= f.inputs do %>
+      <%= f.input :title %>
+      <%= f.input :body %>
+    <% end %>
   </div>
   <div class="form-actions">
     <%= f.submit "Submit", :class =>"btn btn-primary" %>
