--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,3 +1,4 @@
+body { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
 @import "twitter/bootstrap/bootstrap";
 @import "twitter/bootstrap/responsive";
 
