--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,17 +1,20 @@
-<%= semantic_form_for(@person) do |f| %>
-  <% if @person.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@person.errors.count, "error") %> prohibited this person from being saved:</h2>
-      <%= f.semantic_errors %>
+<%= form_for @person, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :title, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :title, :class => 'text_field' %>
     </div>
-  <% end %>
-  <div class="well">
-    <%= f.inputs do %>
-      <%= f.input :title %>
-      <%= f.input :body %>
-    <% end %>
   </div>
+  <div class="control-group">
+    <%= f.label :body, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_area :body, :class => 'text_area' %>
+    </div>
+  </div>
+
   <div class="form-actions">
-    <%= f.submit "Submit", :class =>"btn btn-primary" %>
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                people_path, :class => 'btn' %>
   </div>
 <% end %>
