--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,7 +1,5 @@
+<%- model_class = Person -%>
 <div class="page-header">
-  <h1>Editing person</h1>
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human %></h1>
 </div>
-<%= render 'form' %>
-
-<%= link_to 'Show', @person, :class => "btn btn-primary" %> |
-<%= link_to 'Back', people_path, :class => "btn btn-info" %>
+<%= render :partial => 'form' %>
