--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,6 +1,5 @@
+<%- model_class = Person -%>
 <div class="page-header">
-  <h1>New person</h1>
+  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human %></h1>
 </div>
-<%= render 'form' %>
-
-<%= link_to 'Back', people_path, :class => "btn btn-info" %>
+<%= render :partial => 'form' %>
