--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,8 +1,23 @@
-<p id="notice"><%= notice %></p>
-<div class="well">
-  <p><label>Title</label><%= @person.title %></p>
-  <p><label>Body</label><%= @person.body %></p>
+<%- model_class = Person -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
 </div>
 
-<%= link_to 'Edit', edit_person_path(@person), :class => "btn btn-warning" %> |
-<%= link_to 'Back', people_path, :class => "btn btn-info" %>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
+  <dd><%= @person.title %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:body) %>:</strong></dt>
+  <dd><%= @person.body %></dd>
+</dl>
+
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              people_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_person_path(@person), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              person_path(@person),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
