breadcrumb helper example

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,6 +81,7 @@
       </div>
       </div>
       <div class="row">
+        <%= render_breadcrumbs %>
         <%= yield %>
       </div>
     </div>
