--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,3 +1,4 @@
+<%= render_breadcrumbs %>
 <%- model_class = Person -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
