delete twbs docs, route to people_path

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,22 +52,10 @@
                 <%= link_to "Home", root_path %>
               </li>
               <li class="">
-                <%= link_to "Get started", getting_started_path %>
+                <%= link_to "People", people_path %>
               </li>
               <li class="">
-                <%= link_to "Scaffolding", scaffolding_path %>
-              </li>
-              <li class="">
-                <%= link_to "Base CSS", base_css_path %>
-              </li>
-              <li class="">
-                <%= link_to "Components", components_path %>
-              </li>
-              <li class="">
-                <%= link_to "Javascript", javascript_path %>
-              </li>
-              <li class="">
-                <%= link_to "Customize", customize_path %>
+                <%= link_to "Github", "https://github.com/seyhunak/twitter-bootstrap-rails" %>
               </li>
             </ul>
           </div>
@@ -90,16 +78,8 @@
     ================================================== -->
     <footer class="footer">
       <div class="container">
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>Designed and built with all the love in the world <a href="http://twitter.com/twitter" target="_blank">@twitter</a> by <a href="http://twitter.com/mdo" target="_blank">@mdo</a> and <a href="http://twitter.com/fat" target="_blank">@fat</a>.</p>
-        <p>Code licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>. Documentation licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
-        <p>Icons from <a href="http://glyphicons.com">Glyphicons Free</a>, licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
-        <ul class="footer-links">
-          <li><a href="http://blog.getbootstrap.com">Read the blog</a></li>
-          <li><a href="https://github.com/twitter/bootstrap/issues?state=open">Submit issues</a></li>
-          <li><a href="https://github.com/twitter/bootstrap/wiki">Roadmap and changelog</a></li>
-        </ul>
-      </div>
+      Teststrap is a basic rails app demo for twitter-bootstrap-rails.
+     </div>
     </footer>
 
     <!-- Javascripts ================================================== -->
