--- a/app/views/widgets/_form.html.erb
+++ b/app/views/widgets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @widget, :html => { :class => 'form-horizontal' } do |f| %>
+<%= form_for widget, :html => { :class => 'form-horizontal' } do |f| %>
   <div class="form-group">
     <%= f.label :cog, :class => 'control-label' %>
     <div class="controls">
