--- a/app/views/widgets/show.html.haml
+++ b/app/views/widgets/show.html.haml
@@ -15,7 +15,7 @@
   %br
   = @widget.axle
 
-.form-actions
-  = link_to t('.back', :default => t("helpers.links.back")), widgets_path, :class => 'btn'
-  = link_to t('.edit', :default => t("helpers.links.edit")), edit_widget_path(@widget), :class => 'btn'
-  = link_to t('.destroy', :default => t("helpers.links.destroy")), widget_path(@widget), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
+
+= link_to t('.back', :default => t("helpers.links.back")), widgets_path, :class => 'btn btn-default'
+= link_to t('.edit', :default => t("helpers.links.edit")), edit_widget_path(@widget), :class => 'btn btn-default'
+= link_to t('.destroy', :default => t("helpers.links.destroy")), widget_path(@widget), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
