--- a/app/views/widgets/edit.html.haml
+++ b/app/views/widgets/edit.html.haml
@@ -1,4 +1,6 @@
 - model_class = Widget
 .page-header
   %h1=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize
-= render :partial => "form"
+.col-md-12
+  .row
+    = render :partial => "form"
