--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,7 +31,7 @@
           = menu_item 'Wiki', 'https://github.com/seyhunak/twitter-bootstrap-rails/wiki'
         = menu_group :pull => :right do
           .form-group
-            = menu_item 'Log Out', root_path, class: 'btn btn-primary btn-sm', method: :delete
+            = menu_item 'Log Out', destroy_user_session_path, class: 'btn btn-primary btn-sm', method: :delete
     %div{style: "padding-top: 60px"}
     .container
       .row
