--- a/app/views/widgets/_form.html.haml
+++ b/app/views/widgets/_form.html.haml
@@ -16,5 +16,7 @@
         = f.text_field :axle, class: 'form-control', required: true
       = error_span :axle
     .form-group
+      = date_picker
+    .form-group
       = f.submit nil,class: 'btn btn-primary'
       = link_to t('.cancel', :default => t("helpers.links.cancel")), widgets_path, :class => 'btn btn-default'
