--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
 
   %body
     .container-fluid
-      = nav_bar fixed: :top, brand: 'railsstrap v 3.2.0.2', :responsive => true do
+      = nav_bar fixed: :top, brand: 'railsstrap v 3.3.0', :responsive => true do
         = menu_group do
           = menu_item 'Home', root_path
           = drop_down 'Helpers' do
@@ -29,6 +29,7 @@
             = menu_item 'Icons', 'https://github.com/toadkicker/railsstrap/wiki/Bages,-Labels,-Fontawesome,-and-Glyphicons'
             = menu_item 'Navbars', 'https://github.com/toadkicker/railsstrap/wiki/Navbar-Helper'
             = menu_item 'Modals', 'https://github.com/toadkicker/railsstrap/wiki/Modal-Helper'
+            = menu_item 'Date/Time Picker', 'https://github.com/toadkicker/railsstrap/wiki/DateTime-Picker'
           = menu_divider
           = drop_down 'Widgets' do
             = menu_item 'All Widgets', widgets_path
@@ -58,3 +59,4 @@
               %li= link_to 'Link 3', '/path3'
       %footer
         %p &copy; Company 2014
+    = date_picker_javascript()
