test cdn fontawesome path

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -4,6 +4,7 @@
 
 // Font Awesome
 @import "fontawesome/less/font-awesome";
+@fa-font-path: "//netdna.bootstrapcdn.com/font-awesome/4.2.0/fonts"; // for referencing Bootstrap CDN font files directly
 
 // Glyphicons - included by default in bootstrap.
 // You may need to customize config/initializers/assets.rb (Rails 4), or config/environments/[env].rb to add font paths in.
