cdnifying fontawesome path

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -4,7 +4,9 @@
 
 // Font Awesome
 @import "fontawesome/less/font-awesome";
+//We reccomend using the CDN in production,
 @fa-font-path: "//netdna.bootstrapcdn.com/font-awesome/4.2.0/fonts"; // for referencing Bootstrap CDN font files directly
+//but you're welcome to host the files yourself.
 
 // Glyphicons - included by default in bootstrap.
 // You may need to customize config/initializers/assets.rb (Rails 4), or config/environments/[env].rb to add font paths in.
