--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,11 +1,12 @@
-@import (once) "bootstrap/less/bootstrap";
+@import "bootstrap/less/bootstrap";
 //If you want exotic placement features, animations, and more, import this
-@import (once) "railsstrap";
-@import "fontawesome";
+@import "railsstrap";
 
 // Glyphicons - included by default in bootstrap.
 // You may need to customize config/initializers/assets.rb (Rails 4), or config/environments/[env].rb to add font paths in.
 // In either case of FontAwesome or Glyphicons, the railsstrap:install task should insert the appropriate entries for you.
+
+@import 'fontawesome';
 
 // Your custom LESS stylesheets goes here
 //
@@ -23,5 +24,5 @@
 // Date and Time Picker
 //
 // To enable the date and time picker, uncomment this line:
-@import "datepicker/datepicker.less";
+// @import "datepicker/datepicker.less";
 // Don't forget to include the javascript library as well.
