--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,10 +45,10 @@
     %div{style: "padding-top: 60px"}
     .container
       .row
-        .col-lg-9
+        .col-lg-9.col-md-9.col-sm-9
           = bootstrap_flash
           = yield
-        .col-lg-3
+        .col-lg-3.col-md-3.col-sm-3
           %h3 Sidebar Example
           .well.sidebar-nav
             %ul.nav.nav-list
