--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less.erb
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less.erb
@@ -8,6 +8,8 @@
 
 @import 'fontawesome';
 
+@fa-font-path:
+
 // Your custom LESS stylesheets goes here
 //
 // Since railsstrap was imported above you have access to its mixins which
